HW3_Kuber_adv/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tasks-service-depl
spec:
    replicas: 3
    selector:
        matchLabels:
            app: tasks-service
    template:
        metadata:
            labels:
                app: tasks-service
        spec:
            containers:
            - name: tasks-service
              image: vladraven/otus_tasks_service
              ports:
                - containerPort: 5000
