HW3_Kuber_adv/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: tasks-service-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp($|/)(.*)
            backend:
                serviceName: tasks-service-serv
                servicePort: 9000
